--- a/css/style.css
+++ b/css/style.css
@@ -156,6 +156,30 @@ menu{
     border: 1px solid var(--light-grey2);
 }
 
+.contact-list{
+    border-top: 1px solid var(--light-grey2);
+    border-bottom: 1px solid var(--light-grey2);
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.contact-list li {
+    border-top: 1px solid var(--light-grey2);
+    border-bottom: 1px solid var(--light-grey2);
+    padding: 10px 15px;
+
+}
+
+.chat-preview{
+    color: var(--grey);
+    font-size: 13px;
+}
+
+.chat-time{
+    font-size: 10px;
+    align-self: start;
+}
 
 
 
